--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only ./Assignment.ts"
+    "start": "ts-node-dev --respawn --transpile-only ./Github10.ts"
   },
   "keywords": [],
   "author": "",
